# students_app

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  sample.env
migrations/versions/: 34dc54ce7ae2_.py  76be054651f3_.py  79386f03e582_.py  c883f3f16485_.py  d2258d2a88bd_.py
students_app/: main.py
students_app/models/: __init__.py  student.py  student_subject_aggregate.py  subject.py
tests/: test_students_app.py
